html fixed, new if-else statements added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link href="css/theme.css" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/jquery-3.2.1.js"></script>
-  <script src="js/scripts.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <title>What programming language should I learn?</title>
-</head>
+  <head>
+    <link href="css/theme.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <title>What programming language should I learn?</title>
+  </head>
 <body>
   <div class="container">
     <div class="panel panel-default">
@@ -15,12 +15,7 @@
         <div class="panel-title">What Epicodus programming stack is right for you? Choose the right stack!</div>
       </div>
       <div class="panel-body">
-        <div class="about">Epicodus provides full-time courses in languages such as C#, PHP, Javascript,
-          .NET, Ruby, Rails, React, and more. Every track starts with Introduction
-          to Programming, and includes an advanced JavaScript course, as well as
-          two language-specific courses: four five-week sessions in total. In addition,
-          students complete two weeks of job and internship prep and finish their
-          studies with a five-week internship.</div>
+        <div class="about">Epicodus provides full-time courses in languages such as C#, PHP, Javascript, .NET, Ruby, Rails, React, and more. Every track starts with Introduction to Programming, and includes an advanced JavaScript course, as well as two language-specific courses: four five-week sessions in total. In addition, students complete two weeks of job and internship prep and finish their studies with a five-week internship.</div>
         <div class="epicodus">Epicodus offers the following software stacks in Portland and Seattle:</div>
         <div class="row">
           <div class="col-md-3">
@@ -31,146 +26,111 @@
             <button id="css_text" type="button" class="btn btn-primary btn-lg">CSS/Design</button>
           </div>
           <div class="col-md-5">
-            <div class="ruby_description">Ruby is a favorite language of developers building interactive web applications.
-              If an app involves users creating accounts, entering information, and
-              interacting with dynamic content, there's a good chance it is built
-              with Ruby. Ruby became popular because the Rails framework, which is
-              written with Ruby, simplified many of the common tasks associated with
-              building web applications. It's most popular with startups and smaller
-              companies who are looking to build their product quickly. </div>
-            <div
-            class="php_description">PHP is by far the most popular backend language today, with 80 percent
-              of websites utilizing it 'server-side'. It is perhaps best known for
-              it's use in content management systems like Wordpress, Drupal, and
-              Joomla. But the versatility of the language and the frameworks it powers
-              make employment options numerous and diverse. If you're keen to work
-              for a fast paced agency that builds websites for lots of clients, or
-              maintain the security and stability of a huge complex of government
-              websites, or if you like the idea of building out small sites for brands,
-              businesses, and organizations - In any of these cases, PHP would be
-              a great way to go. </div>
-          <div class="java_description">Java is also a favorite of enterprise companies, but its appeal is broader
-            as well: it's one of the most popular of all programming languages, and
-            it's used in everything from for high-performance processing to building
-            Android user interfaces. Because Java has been very popular for a very
-            long time and is used in so many applications, it is also a very high-demand
-            language. If you're interested in working for an enterprise-level company,
-            as an Android developer, or in high-performance applications, Java could
-            be a good language to learn. </div>
-          <div class="csharp_description">C# is most popular among bigger established businesses, often for building
-            internal software. Because it's been around for a long time and has the
-            backing of Microsoft, it is one of the most in-demand languages in the
-            job market. C# has also been going through a bit of a rebirth lately,
-            with Microsoft open sourcing the language and surrounding platform, porting
-            it to run on Mac and Linux, and incorporating many of the best features
-            of other languages. If you like the idea of working for a larger company
-            on business software, C# is a great choice. </div>
-          <div class="css_description">Web design is a process of conceptualizing, planning, and building a collection
-            of electronic files that determine the layout, colors, text styles, structure,
-            graphics, images, and use of interactive features that deliver pages
-            to your site visitors. Web Design is a crucial component in web development,
-            and students who learn design will be able to engineer positive and interactive
-            user experiences through innovative interfaces. </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="well">Let's take a survey!</div>
-  <div class="row">
-    <div class="col-md-3">
-      <div class="form-group">
-        <label for="person1">
-          <h4>First Name</h4>
-        </label>
-        <input id="person1" class="form-control" type="text"> </div>
-    </div>
-    <div class="col-md-5">
-      <div class="form-group">
-        <label for="person2">
-          <h4>Last Name</h4>
-        </label>
-        <input id="person2" class="form-control" type="text"> </div>
-    </div>
-  </div>
-  <div id="intro_types">
-    <h3>Are you currently enrolled in Intro to Programming?</h3>
-  </div>
-  <div class="radio">
-    <label id="no_radio">
-      <input type="radio" name="choosing" value="No" checked> No </label>
-  </div>
-  <div class="radio">
-    <label id="yes_radio">
-      <input type="radio" name="choosing" value="Yes"> Yes </label>
-  </div>
-  <div id="app_types">
-    <h3>What type of software applications?</h3>
-  </div>
-  <div class="radio">
-    <label id="web_radio">
-      <input type="radio" name="application" value="Web" checked> Web </label>
-  </div>
-  <div class="radio">
-    <label id="mobil_radio">
-      <input type="radio" name="application" value="mobile"> Mobile </label>
-  </div>
-  <div class="radio">
-    <label id="graphic_radio">
-      <input type="radio" name="application" value="graphics_programs"> Graphics Programs </label>
-  </div>
-  <div id="program_lang">
-    <h3>What programming language?</h3>
-  </div>
-  <div class="radio">
-    <label id="java_radio">
-      <input type="radio" name="language" value="java" checked> Java </label>
-  </div>
-  <div class="radio">
-    <label id="ruby_lang_radio">
-      <input type="radio" name="language" value="ruby"> Ruby </label>
-  </div>
-  <div class="radio">
-    <label id="php_lang_radio">
-      <input type="radio" name="language" value="php"> PHP </label>
-  </div>
-  <div class="csharp_radio">
-    <label id="scharp_lang_radio">
-      <input type="radio" name="language" value="csharp"> C# </label>
-  </div>
-  <div class="css_radio">
-    <label id="scharp_lang_radio">
-      <input type="radio" name="language" value="css"> CSS/Design </label>
-  </div>
-  <div id="logic_choice">
-    <h3>Business vs User Interface logic?</h3>
-  </div>
-  <div class="radio">
-    <label id="backend_radio">
-      <input type="radio" name="type" value="backend" checked> Backend development
-    </label>
-  </div>
-  <div class="radio">
-    <label id="frontend_radio">
-      <input type="radio" name="type" value="frontend"> Frontend development </label>
-  </div>
-    <button id ="submit_button" type="button" class="btn btn-info btn-lg">Submit</button>
-      <div class="modal fade" id="myModal" role="dialog">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">Stack for you!</h4>
-            </div>
-            <div id="modal-text" class="modal-body">
-              <p>Some text in the modal.</p>
-            </div>
-            <div class="modal-footer">
-              <button id="close" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
+            <div class="ruby_description">Ruby is a favorite language of developers building interactive web applications. If an app involves users creating accounts, entering information, and interacting with dynamic content, there's a good chance it is built with Ruby. Ruby became popular because the Rails framework, which is written with Ruby, simplified many of the common tasks associated with building web applications. It's most popular with startups and smaller companies who are looking to build their product quickly. </div>
+            <div class="php_description">PHP is by far the most popular backend language today, with 80 percent of websites utilizing it 'server-side'. It is perhaps best known for it's use in content management systems like Wordpress, Drupal, and Joomla. But the versatility of the language and the frameworks it powers make employment options numerous and diverse. If you're keen to work for a fast paced agency that builds websites for lots of clients, or maintain the security and stability of a huge complex of government websites, or if you like the idea of building out small sites for brands, businesses, and organizations - In any of these cases, PHP would be a great way to go.</div>
+            <div class="java_description">Java is also a favorite of enterprise companies, but its appeal is broader as well: it's one of the most popular of all programming languages, and it's used in everything from for high-performance processing to building Android user interfaces. Because Java has been very popular for a very long time and is used in so many applications, it is also a very high-demand language. If you're interested in working for an enterprise-level company, as an Android developer, or in high-performance applications, Java could be a good language to learn.</div>
+            <div class="csharp_description">C# is most popular among bigger established businesses, often for building internal software. Because it's been around for a long time and has the backing of Microsoft, it is one of the most in-demand languages in the job market. C# has also been going through a bit of a rebirth lately, with Microsoft open sourcing the language and surrounding platform, porting it to run on Mac and Linux, and incorporating many of the best features of other languages. If you like the idea of working for a larger company on business software, C# is a great choice.</div>
+            <div class="css_description">Web design is a process of conceptualizing, planning, and building a collection of electronic files that determine the layout, colors, text styles, structure, graphics, images, and use of interactive features that deliver pages to your site visitors. Web Design is a crucial component in web development, and students who learn design will be able to engineer positive and interactive user experiences through innovative interfaces.</div>
           </div>
         </div>
       </div>
-  <div id="output"> </div>
-</div>
+    </div>
+    <div class="well">Let's take a survey!</div>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="form-group">
+          <label for="person1">
+          <h4>First Name</h4>
+        </label>
+          <input id="person1" class="form-control" type="text"> </div>
+      </div>
+      <div class="col-md-5">
+        <div class="form-group">
+          <label for="person2">
+          <h4>Last Name</h4>
+        </label>
+          <input id="person2" class="form-control" type="text"> </div>
+      </div>
+    </div>
+    <div id="intro_types">
+      <h3>Are you currently enrolled in Intro to Programming?</h3>
+    </div>
+    <div class="radio">
+      <label id="no_radio">
+      <input type="radio" name="choosing" value="No" checked> No </label>
+    </div>
+    <div class="radio">
+      <label id="yes_radio">
+      <input type="radio" name="choosing" value="Yes"> Yes </label>
+    </div>
+    <div id="app_types">
+      <h3>What type of software applications?</h3>
+    </div>
+    <div class="radio">
+      <label id="web_radio">
+      <input type="radio" name="application" value="Web" checked> Web </label>
+    </div>
+    <div class="radio">
+      <label id="mobil_radio">
+      <input type="radio" name="application" value="mobile"> Mobile </label>
+    </div>
+    <div id="program_lang">
+      <h3>What programming language?</h3>
+    </div>
+    <div class="radio">
+      <label id="java_radio">
+      <input type="radio" name="language" value="java" checked> Java </label>
+    </div>
+    <div class="radio">
+      <label id="ruby_lang_radio">
+      <input type="radio" name="language" value="ruby"> Ruby </label>
+    </div>
+    <div class="radio">
+      <label id="php_lang_radio">
+      <input type="radio" name="language" value="php"> PHP </label>
+    </div>
+    <div class="csharp_radio">
+      <label id="scharp_lang_radio">
+      <input type="radio" name="language" value="csharp"> C# </label>
+    </div>
+    <div class="css_radio">
+      <label id="scharp_lang_radio">
+      <input type="radio" name="language" value="css"> CSS/Design </label>
+    </div>
+    <div class="javascript_radio">
+      <label id="javascript_lang_radio">
+      <input type="radio" name="language" value="javascript">JavaScript</label>
+    </div>
+    <div id="logic_choice">
+      <h3>Business vs User Interface logic?</h3>
+    </div>
+    <div class="radio">
+      <label id="backend_radio">
+      <input type="radio" name="type" value="backend" checked> Backend development
+    </label>
+    </div>
+    <div class="radio">
+      <label id="frontend_radio">
+      <input type="radio" name="type" value="frontend"> Frontend development </label>
+    </div>
+    <button id="submit_button" type="button" class="btn btn-info btn-lg">Submit</button>
+    <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Stack for you!</h4>
+          </div>
+          <div id="modal-text" class="modal-body">
+            <p>Some text in the modal.</p>
+          </div>
+          <div class="modal-footer">
+            <button id="close" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="output"></div>
+  </div>
 </body>
 </html>
